k8s/services/root-migration/current-oauth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "10"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"3"},"creationTimestamp":"2026-06-26T17:47:39Z","generation":3,"name":"oauth-service","namespace":"default","resourceVersion":"113261","uid":"984b209f-0907-444d-a03c-986ae25b341b"},"spec":{"progressDeadlineSeconds":600,"replicas":1,"revisionHistoryLimit":10,"selector":{"matchLabels":{"app":"oauth-service"}},"strategy":{"rollingUpdate":{"maxSurge":1,"maxUnavailable":0},"type":"RollingU [...]
  creationTimestamp: "2026-07-10T10:20:18Z"
  generation: 10
  name: oauth-service
  namespace: default
  resourceVersion: "371047"
  uid: 27213af4-bcb4-4dd2-b36c-c2081b924afc
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: oauth-service
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-07-12T16:12:05+06:00"
      labels:
        app: oauth-service
    spec:
      containers:
      - command:
        - node
        - server.js
        image: ghcr.io/asaduzzamanbheramara-prog/shopnoltd-oauth:v1
        imagePullPolicy: IfNotPresent
        name: oauth-service
        ports:
        - containerPort: 3000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: ghcr-secret
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  conditions:
  - lastTransitionTime: "2026-07-10T10:20:19Z"
    lastUpdateTime: "2026-07-10T10:20:19Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  - lastTransitionTime: "2026-07-12T10:11:54Z"
    lastUpdateTime: "2026-07-12T10:11:54Z"
    message: ReplicaSet "oauth-service-57dccb844b" is progressing.
    reason: ReplicaSetUpdated
    status: "True"
    type: Progressing
  observedGeneration: 10
  replicas: 2
  terminatingReplicas: 1
  unavailableReplicas: 2
  updatedReplicas: 1
