k8s/services/root-migration/kc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "34"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"kc","namespace":"toolbox"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"kc"}},"template":{"metadata":{"labels":{"app":"kc"}},"spec":{"containers":[{"env":[{"name":"DATABASE_URL","value":"postgis://kobo:kobo_pass@postgres.toolbox.svc.cluster.local:5432/kpidb"},{"name":"KPI_DATABASE_URL","value":"postgis://kobo:kobo_pass@postgres.toolbox.svc.cluster.local:5432/kpidb"},{"name":"KC_DATABASE_URL","value": [...]
  creationTimestamp: "2026-07-04T18:03:49Z"
  generation: 38
  name: kc
  namespace: toolbox
  resourceVersion: "659267"
  uid: f8194889-e2f7-4509-8950-bd483d531238
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: kc
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-07-06T10:28:26+06:00"
      labels:
        app: kc
    spec:
      containers:
      - env:
        - name: DATABASE_URL
          value: postgis://kobo:kobo_pass@postgres.toolbox.svc.cluster.local:5432/kpidb
        - name: KPI_DATABASE_URL
          value: postgis://kobo:kobo_pass@postgres.toolbox.svc.cluster.local:5432/kpidb
        - name: KC_DATABASE_URL
          value: postgis://kobo:kobo_pass@postgres.toolbox.svc.cluster.local:5432/kobodb
        - name: MONGO_DB_URL
          value: mongodb://mongo.toolbox.svc.cluster.local:27017/kobocat
        - name: REDIS_SESSION_URL
          value: redis://redis.toolbox.svc.cluster.local:6379/1
        - name: REDIS_CACHE_URL
          value: redis://redis.toolbox.svc.cluster.local:6379/2
        - name: CACHE_URL
          value: redis://redis.toolbox.svc.cluster.local:6379/2
        - name: DJANGO_SETTINGS_MODULE
          value: kobo.settings.prod
        - name: DJANGO_SECRET_KEY
          value: y42k8K4M-Ixcc0cGE-f7uLFNMGjrpVs9FK3iQje5UkmdGkWamW9k8Wlx0eoHNaSEQd0
        - name: KPI_PREFIX
          value: /
        image: ghcr.io/asaduzzamanbheramara-prog/shopnoltd-kpi:v1
        imagePullPolicy: Always
        name: kc
        ports:
        - containerPort: 8000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /srv/src/kpi/media
          name: kc-media
        - mountPath: /srv/src/kobocat/media
          name: kf-media
        - mountPath: /srv/init
          name: kf-init-scripts
        - mountPath: /srv/src/kpi/docker/uwsgi.ini
          name: uwsgi-ini-override
          subPath: uwsgi.ini
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: kc-media
        persistentVolumeClaim:
          claimName: kc-media-pvc
      - name: kf-media
        persistentVolumeClaim:
          claimName: kf-media-pvc
      - configMap:
          defaultMode: 493
          name: kf-init-scripts
        name: kf-init-scripts
      - configMap:
          defaultMode: 420
          name: kc-uwsgi-ini
        name: uwsgi-ini-override
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-07-06T04:26:02Z"
    lastUpdateTime: "2026-07-06T04:26:02Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-07-05T08:10:05Z"
    lastUpdateTime: "2026-07-06T04:28:37Z"
    message: ReplicaSet "kc-6c66879d87" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 38
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
