k8s/services/root-migration/kf-live-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kf
  namespace: toolbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kf
  template:
    metadata:
      labels:
        app: kf
    spec:
      containers:
      - env:
        - name: DATABASE_URL
          value: postgis://kobo:kobo_pass@postgres.toolbox.svc.cluster.local:5432/kobodb
        - name: MONGO_HOST
          value: mongo.toolbox.svc.cluster.local
        - name: NGINX_STATIC_DIR
          value: /srv/static_collected
        - name: DJANGO_SECRET_KEY
          value: y42k8K4M-Ixcc0cGE-f7uLFNMGjrpVs9FK3iQje5UkmdGkWamW9k8Wlx0eoHNaSEQd0
        - name: KOBOFORM_URL
          value: http://kobo.shopnoltd.dpdns.org
        - name: KOBOCAT_URL
          value: http://kf.shopnoltd.dpdns.org
        - name: PUBLIC_DOMAIN_NAME
          value: shopnoltd.dpdns.org
        - name: KOBOCAT_PUBLIC_SUBDOMAIN
          value: kf
        - name: SECURE_PROXY_SSL_HEADER
          value: "HTTP_X_FORWARDED_PROTO,https"
        - name: USE_X_FORWARDED_HOST
          value: "True"
        - name: SESSION_COOKIE_SECURE
          value: "True"
        - name: CSRF_COOKIE_SECURE
          value: "True"
        image: ghcr.io/asaduzzamanbheramara-prog/shopnoltd-kobocat:v1
        imagePullPolicy: Always
        name: kf
        ports:
        - containerPort: 8000
          protocol: TCP
        volumeMounts:
        - mountPath: /srv/init
          name: kf-init-scripts
        - mountPath: /srv/static_collected
          name: nginx-static
        - mountPath: /srv/src/kobocat/media
          name: kf-media
        - mountPath: /srv/src/kobocat/docker/kobocat.ini
          name: kobocat-ini-override
          subPath: kobocat.ini
        - mountPath: /srv/src/kobocat/kobocat-template/templates/registration/login.html
          name: login-template-override
          subPath: login.html
      volumes:
      - configMap:
          defaultMode: 493
          name: kf-init-scripts
        name: kf-init-scripts
      - emptyDir: {}
        name: nginx-static
      - name: kf-media
        persistentVolumeClaim:
          claimName: kf-media-pvc
      - name: kobocat-ini-override
        configMap:
          name: kf-uwsgi-ini
      - name: login-template-override
        configMap:
          name: kf-login-template
