k8s/services/root-migration/running-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "5"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"2"},"creationTimestamp":"2026-06-27T16:29:48Z","generation":2,"labels":{"app":"api"},"name":"api","namespace":"default","resourceVersion":"133385","uid":"48cd9ed8-a35e-4905-bea8-3e40d61d8122"},"spec":{"progressDeadlineSeconds":600,"replicas":1,"revisionHistoryLimit":10,"selector":{"matchLabels":{"app":"api"}},"strategy":{"rollingUpdate":{"maxSurge":"25%","maxUnavailable":"25%"},"type [...]
  creationTimestamp: "2026-07-10T10:20:17Z"
  generation: 5
  labels:
    app: api
  name: api
  namespace: default
  resourceVersion: "281960"
  uid: ec1de303-a482-460c-837a-098e3e8f17a9
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-07-11T16:59:50+06:00"
      labels:
        app: api
    spec:
      containers:
      - env:
        - name: PYTHONPATH
          value: /workspace
        - name: BRAND_NAME
          value: Shopnoltd
        - name: COMPANY
          value: Shopno Database Firm
        image: python:3.11
        imagePullPolicy: IfNotPresent
        name: api
        ports:
        - containerPort: 8000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /workspace
          name: app
      - image: python:3.11
        imagePullPolicy: IfNotPresent
        name: python
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - hostPath:
          path: C:\Users\asadu\PROJECTS\shopnoltd
          type: Directory
        name: app
status:
  conditions:
  - lastTransitionTime: "2026-07-10T10:20:17Z"
    lastUpdateTime: "2026-07-10T10:20:17Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  - lastTransitionTime: "2026-07-11T11:11:00Z"
    lastUpdateTime: "2026-07-11T11:11:00Z"
    message: ReplicaSet "api-7668cdbffc" has timed out progressing.
    reason: ProgressDeadlineExceeded
    status: "False"
    type: Progressing
  observedGeneration: 5
  replicas: 2
  terminatingReplicas: 0
  unavailableReplicas: 2
  updatedReplicas: 1
