k8s/services/root-migration/live-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: live
  namespace: default
spec:
  selector:
    app: live
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
